# Changelog

## Version 4.10.0

* Adding AVIF support using libsvtav1
* Adding #352 default output directory to settings panel
* Adding support for audio profiles with pattern matching for rigaya's hardware encoders

## Version 4.9.4

* Fixing Apple videotoolbox were not being listed as options (thanks to sublimal)
* Fixing concatenation of large amount of files could cause huge slowdowns to the app
* Fixing thumbnails command did not work when ffmpeg was in a directory with a space in it's lineage (thanks to No Name)

## Version 4.9.3

* Fixing #339 After cancelling queue button stay as cancel (thanks to wynterca)
* Fixing internal error that after_done_action could not be set

## Version 4.9.2

* Fixing #334 machine now sleeps during encoding (thanks to Don Gafford)
* Fixing After Conversion command running after every encoding (thanks to Don Gafford)

## Version 4.9.1

* Fixing QSV AVC command builder not working (thanks to Marco Ravich)
* Fixing missing details in readme on how to use additional encoders

## Version 4.9.0

* Adding #109 Support for AVC and HEVC QSV encoding with rigaya's QSVEncC (thanks to msaintauret)
* Adding #196 Support for AVC and HEVC Apple Videotoolbox encoder (thanks to Kay Singh)
* Adding #323 ignore errors options options for queue (thanks to Don Gafford)
* Adding #331 NVEncC API v10 Quality presets: P1 to P7 (thanks to Wontell)
* Fixing #321 dhdr10_opt not added for x265 commands (thanks to GizmoDudex)
* Fixing #327 FastFlix Duplicates encoding task and encodes same movie to infinity (thanks to Wontell)
* Fixing #324 NVEncC wrong Interlace Value set by FastFlix (thanks to Wontell)
* Fixing #278 FastFlix occasionally getting stuck on a single video in a queue (thanks to kamild1996)
* Fixing #330 "Remove Metadata" only removes video metadata for Rigaya's hardware encoders (thanks to wynterca)
* Fixing level was not being passed to hardware encoders

## Version 4.8.1
