@@ -3,8 +3,10 @@
 ## Version 4.10.0
 
 * Adding AVIF support using libsvtav1
-* Adding #352 default output directory to settings panel
+* Adding #352 default output directory to settings panel (thanks to Maddie Davis)
 * Adding support for audio profiles with pattern matching for rigaya's hardware encoders
+* Adding Select All feature for subtitles (thanks to ProFire)
+* Fixing Chinese translations (thanks to leonardyan)
 
 ## Version 4.9.4
 
